_config.yml: updated content in footer

--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ footer:
       url: 'https://www.linkedin.com/'
       style: link
       new_window: true
-  content: LMFAO
+  content: "LMFAO\_ STACKBIT DID YOU THINK YOU COULD PUT YOUR FUCKING WATERMARK HERE. TRY HARDER PUSSY."
 sass:
   indentWidth: 4
   style: compressed
