miles-tone.yaml: updated bio

--- a/_data/team/miles-tone.yaml
+++ b/_data/team/miles-tone.yaml
@@ -4,6 +4,6 @@ first_name: Miles
 last_name: Tone
 photo: images/miles-tone.jpg
 photo_alt: Miles Tone
-bio: >-
-  Aliquam vestibulum morbi blandit cursus risus at ultrices mi. Massa placerat
-  duis ultricies lacus. Amet justo donec enim diam.
+bio: |+
+  Idk who this random ass guy is
+
