--- a/_data/team/dianne-ameter.yaml
+++ b/_data/team/dianne-ameter.yaml
@@ -4,6 +4,5 @@ first_name: Dianne
 last_name: Ameter
 photo: images/dianne-ameter.jpg
 photo_alt: Dianne Ameter
-bio: >-
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec nisl ligula,
-  cursus id molestie vel, maximus aliquet risus.
+bio: |
+  Looking like a fucking clown
