--- a/_data/team/eleanor-carr.yaml
+++ b/_data/team/eleanor-carr.yaml
@@ -3,6 +3,5 @@ first_name: Eleanor
 last_name: Carr
 photo: images/eleanor-carr.jpg
 photo_alt: Eleanor Carr
-bio: >-
-  Enim sit amet venenatis urna cursus eget nunc scelerisque viverra. Ligula
-  ullamcorper malesuada proin libero nunc consequat interdum.
+bio: |
+  Who the fuck are you
