--- a/_data/team/hanson-deck.yaml
+++ b/_data/team/hanson-deck.yaml
@@ -3,6 +3,5 @@ first_name: Hanson
 last_name: Deck
 photo: images/hanson-deck.jpg
 photo_alt: Hanson Deck
-bio: >-
-  Suspendisse ante mi, tincidunt sit amet odio sed, condimentum ultricies nunc.
-  Nam iaculis commodo dui quis suscipit. Ut eu porttitor enim.
+bio: |
+  Literally no one cares who you are
