gordon-norman.yaml: updated bio

--- a/_data/team/gordon-norman.yaml
+++ b/_data/team/gordon-norman.yaml
@@ -4,6 +4,5 @@ first_name: Gordon
 last_name: Norman
 photo: images/gordon-norman.jpg
 photo_alt: Gordon Norman
-bio: >-
-  Sagittis nisl rhoncus mattis rhoncus urna neque viverra. In est ante in nibh
-  mauris cursus mattis molestie porta non pulvinar neque.
+bio: |
+  Gotta keep the kids away from this one
