--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ footer:
   has_social: true
   social_links:
     - label: Twitter
-      url: 'https://twitter.com/'
+      url: 'https://twitter.com/basilicous'
       style: link
       new_window: true
     - label: GitHub
