--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ footer:
       style: link
       new_window: true
     - label: GitHub
-      url: 'https://github.com/'
+      url: 'https://github.com/LowSpecCorgi'
       style: link
       new_window: true
     - label: LinkedIn
