_config.yml: updated label in social_links

--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ footer:
       url: 'https://github.com/LowSpecCorgi'
       style: link
       new_window: true
-    - label: LinkedIn
+    - label: Of course I don't have a fucking linkedin
       url: 'https://www.linkedin.com/'
       style: link
       new_window: true
